# swagger.json
@@ -640,6 +640,36 @@
 					}
 				}
 			}
+		},
+		"/studentEvents/delete": {
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"StudentEvents"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICheckStudentEventReq"
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"servers": [
